Update sandbox link

--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                             <div class="code-dot dot-green"></div>
                         </div>
                         <div class="typing-effect">
-POST https://sandbox-llama.moderntax.io/api/v1/verify<br>
+POST https://sandbox.moderntax.io/<br>
 {<br>
 &nbsp;&nbsp;"ein": "12-3456789",<br>
 &nbsp;&nbsp;"businessName": "Acme Corp",<br>
